# open-brain

./: .gitignore  LICENSE  README.md  pyproject.toml
open_brain/: __init__.py  cli.py  embeddings.py  server.py
open_brain/db/: __init__.py  sqlite_backend.py
