[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "open-brain"
version = "0.1.0"
description = "Persistent semantic memory for AI tools via MCP"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Stephen Purkiss", email = "stephen@purkiss.com" }
]
keywords = ["mcp", "memory", "ai", "knowledge-management", "semantic-search", "claude-code"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.24",
    "onnxruntime>=1.16",
    "tokenizers>=0.15",
    "huggingface-hub>=0.20",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9"]

[project.scripts]
open-brain = "open_brain.cli:main"

[project.urls]
Homepage = "https://github.com/stephenpurkiss/open-brain"
Repository = "https://github.com/stephenpurkiss/open-brain"
